@@ -8,24 +8,18 @@ SDCCEXTRAMKINCLUDE = 1
 SRCTREES += sdcc-extra
 # PENDING
 SDCCEXTRADIR = $(SRCDIR)/sdcc-extra
-# PENDING
-CVSREPOSITORIES += cvs.sourceforge.net:/cvsroot/sdcc
 # Add sdcc-extra to the list of source trees, that are archieved and copied to the snapshot page
 ARCHIVETREES += sdcc-extra
 
-# CVSACCESS is now set through variables.mk
-
 # Override the default fetch behavoiur
-# Default rule for fetching a tree from cvs
+# Default rule for fetching a tree from svn
 $(STAMPDIR)/sdcc-extra.fetched: $(ORIGDIR) $(STAMPDIR)
-	# grep -q :pserver:anonymous@cvs.sourceforge.net:/cvsroot/sdcc $(HOME)/.cvspass || \
-	#  cvs -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/sdcc login
 	cd $(ORIGDIR); \
 	bash -c 'i=0; while ((i < 600)); do { \
 	  ((i += 1)); \
-	    cvs $(CVSFLAGS) -d$(CVSACCESS)@cvs.sourceforge.net:/cvsroot/sdcc co sdcc-extra \
+	    svn $(SVNFLAGS) co https://svn.sourceforge.net/svnroot/sdcc/trunk/sdcc-extra sdcc-extra \
 	    && break ; \
-	  echo CVS failed $$i: `date`; \
+	  echo SVN failed $$i: `date`; \
 	  sleep 1; \
 	} done'
 	touch $@
